--- a/main.css
+++ b/main.css
@@ -185,7 +185,7 @@ h2 {
     padding-left:10px;
 }
 
-#bottom-row {
+#parameter {
     width: 95%;
     height: 200px;
     background-color: white;
@@ -265,7 +265,7 @@ h2 {
 }
 
 .wrapper.s {
-    width: 50%;
+    width: 40%;
     margin: 12px;
 }
 
